--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+ The Tianchen-Liu branch is for notes only. Don't compile and it :)               
+                    
+                    
+                    
+                    
+                    
+                    
+                    
                     Finite Element Discretization Library
                                    __
                        _ __ ___   / _|  ___  _ __ ___
