--- a/README
+++ b/README
@@ -1,4 +1,4 @@
- The Tianchen-Liu branch is for notes only. Don't compile and it :)               
+ The Tianchen-Liu branch is for notes only. Don't compile and run it :)               
                     
                     
                     
