--- a/README
+++ b/README
@@ -1,4 +1,8 @@
- The Tianchen-Liu branch is for notes only. Don't compile and run it :)               
+ The Tianchen-Liu branch is for notes only. 
+ 
+ Most of #ifdef line was commented out
+ 
+ **Don't compile and run it :)**            
                     
                     
                     
